--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@
         </div>
       </div>
 
-
       <!-- frequently Asked questions -->
 
       <div class="faq-section">
@@ -606,15 +605,32 @@
                   <h6>Quick Links</h6>
                   <nav class="footer-navigation">
                     <ul>
-                      <li><a href="/about/who-we-are">About Us</a></li>
-                      <li><a href="/product">Products</a></li>
                       <li>
-                        <a href="/namdev-workforce/life-at-namdev">Our Team</a>
+                        <a href="https://www.namfin.in/about/who-we-are"
+                          >About Us</a
+                        >
                       </li>
-                      <li><a href="/testimonials">Customer Testimonials</a></li>
-                      <li><a href="/gallery">Gallery</a></li>
-                      <li><a href="/career">Career</a></li>
-                      <li><a href="/media-center/csr">CSR</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/product">Products</a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.namfin.in/namdev-workforce/life-at-namdev"
+                          >Our Team</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/testimonials"
+                          >Customer Testimonials</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/gallery">Gallery</a>
+                      </li>
+                      <li><a href="https://www.namfin.in/career">Career</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/media-center/csr">CSR</a>
+                      </li>
                     </ul>
                   </nav>
                 </div>
@@ -622,12 +638,26 @@
                   <h6>Products</h6>
                   <nav class="footer-navigation">
                     <ul>
-                      <li><a href="/product/msme-loan">MSME Loan</a></li>
                       <li>
-                        <a href="/product/two-wheeler-loan">Two Wheeler Loan</a>
+                        <a href="https://www.namfin.in/product/msme-loan"
+                          >MSME Loan</a
+                        >
                       </li>
-                      <li><a href="/product/e-rickshaw">E-Rickshaw Loan</a></li>
-                      <li><a href="/product/solar-loan">Solar Loan</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/product/two-wheeler-loan"
+                          >Two Wheeler Loan</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/product/e-rickshaw"
+                          >E-Rickshaw Loan</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/product/solar-loan"
+                          >Solar Loan</a
+                        >
+                      </li>
                     </ul>
                   </nav>
                 </div>
@@ -636,11 +666,21 @@
                   <nav class="footer-navigation">
                     <ul>
                       <li><a href="#">Apply for a loan</a></li>
-                      <li><a href="#emiCal">EMI calculator</a></li>
-                      <li><a href="/contact">Branch Locator</a></li>
-                      <li><a href="/faq">FAQ</a></li>
-                      <li><a href="/blog">Blog</a></li>
-                      <li><a href="/sitemaps">Sitemap</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/#emiCal"
+                          >EMI calculator</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/contact"
+                          >Branch Locator</a
+                        >
+                      </li>
+                      <li><a href="https://www.namfin.in/faq">FAQ</a></li>
+                      <li><a href="https://www.namfin.in/blog">Blog</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/sitemaps">Sitemap</a>
+                      </li>
                     </ul>
                   </nav>
                 </div>
@@ -648,22 +688,36 @@
                   <h6>Resources</h6>
                   <nav class="footer-navigation">
                     <ul>
-                      <li><a href="/resources/mitc">MITC</a></li>
                       <li>
-                        <a href="/resources/kyc-aml-policy">KYC & AML Policy</a>
+                        <a href="https://www.namfin.in/resources/mitc">MITC</a>
                       </li>
                       <li>
-                        <a href="/resources/fair-practices-code"
+                        <a href="https://www.namfin.in/resources/kyc-aml-policy"
+                          >KYC & AML Policy</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.namfin.in/resources/fair-practices-code"
                           >Fair Practices Code</a
                         >
                       </li>
                       <li>
-                        <a href="/resources/grievance-redressal-mechanism"
+                        <a
+                          href="https://www.namfin.in/resources/grievance-redressal-mechanism"
                           >Grievance Redressal</a
                         >
                       </li>
-                      <li><a href="/resources/disclaimers">Disclaimers</a></li>
-                      <li><a href="/investor/codes-policies">Policies</a></li>
+                      <li>
+                        <a href="https://www.namfin.in/resources/disclaimers"
+                          >Disclaimers</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://www.namfin.in/investor/codes-policies"
+                          >Policies</a
+                        >
+                      </li>
                     </ul>
                   </nav>
                 </div>
@@ -714,9 +768,17 @@
               Namdev Finvest Pvt Ltd | CIN : U65921RJ1997PTC047090 | &copy; 2025
             </p>
             <ul>
-              <li><a href="/resources/mitc">Terms & Conditions</a></li>
-              <li><a href="/privacy-policy">Privacy Policy</a></li>
-              <li><a href="/disclaimer">Disclaimer</a></li>
+              <li>
+                <a href="https://www.namfin.in/resources/mitc"
+                  >Terms & Conditions</a
+                >
+              </li>
+              <li>
+                <a href="https://www.namfin.in/privacy-policy"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li><a href="https://www.namfin.in/disclaimer">Disclaimer</a></li>
             </ul>
           </div>
         </div>
