--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg p-3 sticky-navbar">
       <div class="container-fluid">
-        <a class="navbar-brand logo" href="#">
+        <a class="navbar-brand logo" href="https://www.namfin.in/">
           <img src="./logo.png" alt="Logo" />
         </a>
         <button
@@ -49,25 +49,33 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="https://www.namfin.in/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="https://www.namfin.in/about/who-we-are"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Investor</a>
+              <a class="nav-link" href="https://www.namfin.in/product"
+                >Products</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Team</a>
+              <a
+                class="nav-link"
+                href="https://www.namfin.in/namdev-workforce/life-at-namdev"
+                >Our Team</a
+              >
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.namfin.in/blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Media Center</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="https://www.namfin.in/contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
