--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>account-aggregator</title>
 
+    <!-- favicon link -->
+    <link
+      rel="shortcut icon"
+      href="./namdevfinvestprivatelimited_logo.jpg"
+      type="image/x-icon"
+    />
+
     <!-- css bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
