--- a/index.html
+++ b/index.html
@@ -91,29 +91,6 @@
 
     <!-- end of navbar section  -->
 
-    <!-- search bar -->
-
-    <div class="container-fluid search-bar mt-3">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <form class="d-flex justify-content-center" role="search">
-            <div class="input-group" style="max-width: 500px">
-              <input
-                id="searchInput"
-                type="search"
-                class="form-control"
-                placeholder=""
-                aria-label="Search"
-              />
-              <button class="btn custom-search-button" type="submit">
-                <i class="bi bi-search"></i>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
     <!-- main section -->
 
     <!-- hero image -->
@@ -123,7 +100,6 @@
       <div class="hero-text">
         <h1>Account Aggregator Network</h1>
         <p>Share your financial data securely and safely</p>
-        <button>Get a Call Back</button>
       </div>
     </div>
 
@@ -367,200 +343,6 @@
       </div>
     </div>
 
-    <!--important links, Access blog, Related product -->
-
-    <div class="container my-5">
-      <div class="row g-4">
-        <!-- Important Links Accordion -->
-        <div class="col-md-4">
-          <div class="comBox">
-            <h2>Important Links</h2>
-            <div class="accordion" id="importantLinksAccordion">
-              <!-- Related Links -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingRelated">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseRelated"
-                  >
-                    Related Links
-                  </button>
-                </h2>
-                <div
-                  id="collapseRelated"
-                  class="accordion-collapse collapse"
-                  data-bs-parent="#importantLinksAccordion"
-                >
-                  <div class="accordion-body">
-                    <ul class="list-unstyled">
-                      <li><a href="#">Accounts Safety and Security</a></li>
-                      <li><a href="#">Bank Account Portability</a></li>
-                      <li><a href="#">Register for E-Statement</a></li>
-                      <li><a href="#">Update your PAN Card</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Useful Links -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingUseful">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseUseful"
-                  >
-                    Useful Links
-                  </button>
-                </h2>
-                <div
-                  id="collapseUseful"
-                  class="accordion-collapse collapse"
-                  data-bs-parent="#importantLinksAccordion"
-                >
-                  <div class="accordion-body">
-                    <ul class="list-unstyled">
-                      <li><a href="#">Family Banking</a></li>
-                      <li><a href="#">Track Application</a></li>
-                      <li><a href="#">FAQs</a></li>
-                      <li><a href="#">Cheque Book Charges</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Other Links -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOther">
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseOther"
-                  >
-                    Other Links
-                  </button>
-                </h2>
-                <div
-                  id="collapseOther"
-                  class="accordion-collapse collapse"
-                  data-bs-parent="#importantLinksAccordion"
-                >
-                  <div class="accordion-body">
-                    <ul class="list-unstyled">
-                      <li><a href="#">Get a Call Back</a></li>
-                      <li><a href="#">Download Product Guide</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Download -->
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingDownload">
-                  <button
-                    class="accordion-button"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseDownload"
-                  >
-                    Download
-                  </button>
-                </h2>
-                <div
-                  id="collapseDownload"
-                  class="accordion-collapse collapse show"
-                  data-bs-parent="#importantLinksAccordion"
-                >
-                  <div class="accordion-body">
-                    <ul class="list-unstyled">
-                      <li><a href="#">Form</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-3">
-              <a href="#">Find Nearest Branch</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Blog Card -->
-        <div class="col-md-4">
-          <div class="comBox">
-            <h2><strong>Open Access</strong> Blog</h2>
-            <div class="card">
-              <img
-                src="./media/make-24x7-personal-loan-applications-easier-money.jpg"
-                class="card-img-top"
-                alt="Blog Image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">
-                  24x7 Personal Loans made easy with Account Aggregator
-                </h5>
-                <p class="card-text">
-                  Want a personal loan but don’t have time to fill up lengthy
-                  documentation...
-                </p>
-                <a href="#" class="btn btn-sm btn-outline-primary">Read More</a>
-                <p class="text-muted mt-2">6 min read</p>
-              </div>
-            </div>
-            <div class="text-end mt-2">
-              <a href="#">View All Blogs</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Related Products -->
-        <div class="col-md-4">
-          <div class="comBox">
-            <h2>Related <strong>Products for you</strong></h2>
-            <ul class="list-unstyled product-list">
-              <li>
-                <a href="#"
-                  ><h4>
-                    Prestige <span>Savings</span>
-                    <strong class="nextLine">Account</strong>
-                  </h4></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><h4>
-                    Prime <span>Savings</span>
-                    <strong class="nextLine">Account</strong>
-                  </h4></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><h4>
-                    Future Star <span>Savings</span>
-                    <strong class="nextLine">Account</strong>
-                  </h4></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><h4>
-                    Basic <span>Savings</span>
-                    <strong class="nextLine">Account</strong>
-                  </h4></a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!-- footer section -->
     <footer class="main-footer">
       <div class="have-question">
@@ -601,7 +383,9 @@
               </ul>
             </div>
             <div class="col-md-4 text-md-end">
-              <a href="/contact" class="button btn-white">Contact Us</a>
+              <a href="https://www.namfin.in/contact" class="button btn-white"
+                >Contact Us</a
+              >
               <a href="tel:18001035800" class="button btn-white">
                 <i class="bi bi-telephone"></i>
                 <span>1800-103-5800</span>
